# gRPC_Playground

./: CMakeLists.txt  Makefile  README.md
Docker/: Dockerfile  docker-entrypoint.sh
proto/: CMakeLists.txt
proto/myproto/: datarequest.proto  dataresponse.proto  heartbeatresponse.proto  messages.proto
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/src/: CMakeLists.txt  main.cpp
src/client/src/dataclient/: dataclient.cpp  dataclient.h
src/client/src/serverstreamclient/: serverstreamclient.cpp  serverstreamclient.h
src/server/: CMakeLists.txt
src/server/src/: CMakeLists.txt  main.cpp
src/server/src/clientmonitor/: clientmonitor.cpp  clientmonitor.h
src/server/src/dataservice/: dataservice.cpp  dataservice.h
src/server/src/logger/: logger.cpp  logger.h
